--- a/Tutoriel 1_Les différentes variables.ipynb
+++ b/Tutoriel 1_Les différentes variables.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Salut Thomas!\n",
+    "# Salut!\n",
     "Je fais un test avec ce genre de format. Tu devrais pouvoir utiliser ce document sans avoir à installer quelque chose en particulier... On verra si ça marche ensemble.\n",
     "\n",
     "C'est un *jupyter notebook*! Ça interprète le code en python sous forme de cellule et je trouve que c'est pratique pour l'éducation. J'ai comme projet de demander à Christian de remonter ses cours utilisant python avec ce format alors c'est peut-être un test! J'apprends moi aussi à utiliser cet outil, je n'ai jamais travaillé avec ça.\n",
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Salut Thomas!\n"
+      "Salut!\n"
      ]
     }
    ],
@@ -29,7 +29,7 @@
     "# Cette cellule contient du code que tu peux exécuter à l'aide du ti-piton \"Exécuter\" en haut ou bien en appuyant sur \n",
     "# \"ctrl+enter\"\n",
     "\n",
-    "print('Salut Thomas!')"
+    "print('Salut!')"
    ]
   },
   {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -62,19 +62,19 @@
    "source": [
     "# On peut commencer par définir une variable en lui choisissant un nom et puis une valeur.\n",
     "# En voilà un exemple. Pour créer une chaîne de caractères, tu dois entourer le mot en question par '', \"\" ou bien \"\"\" \"\"\":\n",
-    "nom = 'Thomas'"
+    "nom = 'Roger'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thomas\n"
+      "Roger\n"
      ]
     }
    ],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-123-2b297e252b08>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# C'est évident! Entier + Réel = Réel. Voilà, logique. Que se passe-t-il si on additione d'autres types de variables, comme...\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mreponse3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mage\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mnom\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-10-2b297e252b08>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# C'est évident! Entier + Réel = Réel. Voilà, logique. Que se passe-t-il si on additione d'autres types de variables, comme...\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mreponse3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mage\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mnom\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
      ]
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -281,14 +281,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon nom est Thomas\n"
+      "Mon nom est Roger\n"
      ]
     }
    ],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-127-60bcffcbbd69>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Mon âge est: '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-13-60bcffcbbd69>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Mon âge est: '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
      ]
     }
@@ -345,8 +345,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -365,7 +367,7 @@
     "print(type(age_str))\n",
     "\n",
     "# Ça marche tu????\n",
-    "print('Mon âge est ' + str(age))"
+    "print('Mon âge est ' + age_str)"
    ]
   },
   {
@@ -394,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +404,7 @@
      "output_type": "stream",
      "text": [
       "<class 'list'>\n",
-      "['Thomas', 31, 3.1416]\n"
+      "['Roger', 31, 3.1416]\n"
      ]
     }
    ],
@@ -421,14 +423,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thomas\n",
+      "Roger\n",
       "31\n",
       "3.1416\n"
      ]
@@ -453,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +465,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-131-e1b0d40e6c6e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mle_quatrieme\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mma_liste\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-18-e1b0d40e6c6e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mle_quatrieme\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mma_liste\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
@@ -481,24 +483,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "['Thomas', 31, 3.1416]\n",
+      "['Roger', 31, 3.1416]\n",
       "4\n",
-      "['Thomas', 31, 3.1416, 'Un nouvel ordinateur']\n"
+      "['Roger', 31, 3.1416, 'Quelque chose']\n"
      ]
     }
    ],
    "source": [
-    "print(len(ma_liste))\n",
     "print(ma_liste)\n",
-    "ma_liste.append('Un nouvel ordinateur')\n",
+    "ma_liste.append('Quelque chose')\n",
     "print(len(ma_liste))\n",
     "print(ma_liste)\n"
    ]
@@ -519,17 +519,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thomas\n",
+      "Roger\n",
       "31\n",
       "3.1416\n",
-      "Un nouvel ordinateur\n",
+      "Quelque chose\n",
       "Tout les éléments ont été imprimés\n"
      ]
     }
@@ -562,19 +562,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "31\n",
       "False\n"
      ]
     }
    ],
    "source": [
-    "print(age > 32)"
+    "print(age)\n",
+    "print(age != 31)"
    ]
   },
   {
@@ -592,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -600,14 +602,14 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "['Thomas', 31, 3.1416, 'Un nouvel ordinateur', True]\n"
+      "['Roger', 31, 3.1416, 'Quelque chose', True]\n"
      ]
     }
    ],
    "source": [
-    "condition = age > 14\n",
-    "print(condition)\n",
-    "ma_liste.append(condition)\n",
+    "toto = age > 14\n",
+    "print(toto)\n",
+    "ma_liste.append(toto)\n",
     "print(ma_liste)"
    ]
   },
@@ -620,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -640,23 +642,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "1\n",
+      "True\n",
+      "Tu est jeune dis donc?\n",
+      "Voila\n"
      ]
     }
    ],
    "source": [
     "# On peut aussi donner à 'if' un booléen!\n",
+    "age = 1\n",
+    "print(age)\n",
     "condition2 = age < 2\n",
     "print(condition2)\n",
     "if condition2:\n",
-    "    print('Tu est jeune dis donc?')"
+    "    print('Tu est jeune dis donc?')\n",
+    "print('Voila')"
    ]
   },
   {
@@ -670,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -685,10 +693,10 @@
     "# if et else peuvent être interprétés littéralement comme 'si' et 'sinon'. Voilà un exemple:\n",
     "# Tu peux modifier la valeur de b pour essayer les différents résultats.\n",
     "\n",
-    "b = 10\n",
+    "b = 8.0000001\n",
     "\n",
-    "if b > 8:\n",
-    "    print('b est plus grand que 8')\n",
+    "if b > 8: \n",
+    "    print('b est plus grand que 8') \n",
     "else:\n",
     "    print('b est plus petit ou égal à 8')\n",
     "    "
@@ -703,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -775,15 +783,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-140-f4b96c1c4177>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-27-c59444913e08>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-140-f4b96c1c4177>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    if (? ? ?) ? ?:\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-27-c59444913e08>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    if (? ? ?) ? ?:\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -791,15 +799,15 @@
     "année = 2021\n",
     "\n",
     "if (? ? ?) ? ?:\n",
-    "    if (? ? ?) ? ?:\n",
+    "    if (? ? ?) ? ? :\n",
     "        if (? ? ?) ? ?:\n",
     "            print(str(année) + \" est bissextile!\")\n",
     "        else:\n",
-    "            print(str(année) + \" n'est pas bissextile :'('\")\n",
+    "            print(str(année) + \" n'est pas bissextile :'(\")\n",
     "    else:\n",
     "        print(str(année) + \" est bissextile!\")\n",
     "else:\n",
-    "    print(str(année) + \" n'est pas bissextile :'('\")\n",
+    "    print(str(année) + \" n'est pas bissextile :'(\")\n",
     "        "
    ]
   }
@@ -809,6 +817,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
